Fix filter hiding behind details panel

--- a/modules/st2-filter/style.less
+++ b/modules/st2-filter/style.less
@@ -18,6 +18,11 @@
     z-index: 3;
   }
 
+  &:last-of-type&--active &__variants {
+    right: 0;
+    border-radius: 5px 0 5px 5px;
+  }
+
   &__label {
     padding: 0 10px;
 
